<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateHabitActivity"
    >

    <EditText
        android:id="@+id/et_title"
        android:hint="@string/edit_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="string"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/et_description"
        android:hint="@string/edit_description_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="2"
        android:autofillHints="string"
        />

    <Button
        android:id="@+id/btn_choose_image"
        android:text="@string/choose_image_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_preview_description"
        />

    <Button
        android:id="@+id/btn_save"
        android:text="@string/btn_save_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tv_error"
        android:visibility="invisible"
        android:textColor="#F44336"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>